# python-blame

./: .gitignore  README.md  pyproject.toml  setup.py
python_blame/: __init__.py
